Push rebased to develop

--- a/.github/workflows/auto-rebase-main-to-develop.yml
+++ b/.github/workflows/auto-rebase-main-to-develop.yml
@@ -19,3 +19,4 @@ jobs:
           set -o xtrace
           git checkout develop
           git rebase origin/main
+          git push origin develop
