--- a/.github/workflows/auto-rebase-main-to-develop.yml
+++ b/.github/workflows/auto-rebase-main-to-develop.yml
@@ -15,8 +15,25 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       - name: Rebase develop
+        env:
+          GH_API_URI: "https://api.github.com"
+          GH_API_HEADER: "Accept: application/vnd.github.v3+json"
+          GH_API_AUTH_HEADER: "Authorization: token $GITHUB_TOKEN"
         run: |
           set -o xtrace
+
+          set | grep ^GH_
+
+          USER_LOGIN=$(jq -r ".comment.user.login" "$GITHUB_EVENT_PATH")
+          user_resp=$(curl -X GET -s -H "${GH_API_AUTH_HEADER}" -H "${GH_API_HEADER}" \
+            "${GH_API_URI}/users/${USER_LOGIN}")
+
+          USER_NAME=$(echo "$user_resp" | jq -r ".name")
+          if [[ "$USER_NAME" == "null" ]]; then
+            USER_NAME=$USER_LOGIN
+          fi
+          USER_NAME="${USER_NAME} (Rebase PR Action)"
+
           # Checkout or create a new develop branch
           git checkout develop || git checkout -b develop origin/main
           git rebase origin/main
