Reset before rebase

--- a/.github/workflows/auto-rebase-main-to-develop.yml
+++ b/.github/workflows/auto-rebase-main-to-develop.yml
@@ -32,10 +32,10 @@ jobs:
           PUSHER_EMAIL="$PUSHER_NAME@users.noreply.github.com"
 
           # Checkout or create a new develop branch
-          git checkout develop || git checkout -b develop origin/main
+          (git checkout develop && git reset --hard origin/develop) || git checkout -b develop origin/main
 
           git config --global user.email "$PUSHER_EMAIL"
           git config --global user.name "$PUSHER_NAME (Rebase PR Action)"
-          
+
           git rebase origin/main
           git push origin develop
