Force push as the tip will change due to rebase

--- a/.github/workflows/auto-rebase-main-to-develop.yml
+++ b/.github/workflows/auto-rebase-main-to-develop.yml
@@ -38,4 +38,4 @@ jobs:
           git config --global user.name "$PUSHER_NAME (Rebase PR Action)"
 
           git rebase origin/main
-          git push origin develop
+          git push origin develop --force
