--- a/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
+++ b/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
@@ -18,7 +18,7 @@ on:
   pull_request:
     types: [opened, edited, synchronize, reopened]
     branches:
-    - "master"
+    - "main"
     - "develop"
     - "release/**"
 
