--- a/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
+++ b/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
     - name: Ensure PR is assigned to correct target
       env:
-        GITHUB_TOKEN: ${{ secret.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         PR_NUMBER=$(jq -r ".pull_request.number" "$GITHUB_EVENT_PATH")
         if [[ "$PR_NUMBER" == "null" ]]; then
