--- a/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
+++ b/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
@@ -71,7 +71,8 @@ jobs:
         if [[ "$HEAD_BRANCH" == "develop" ]] && [[ "$BASE_BRANCH" == "main" ]]; then
           curl -X POST  -H "Authorization: token $GITHUB_TOKEN" \
                   -H "Accept: application/vnd.github.v3+json" \
-                  -d '{"body": "Direct merge from `develop` to `main` is not permitted! Create a `release/` branch first!"}' \
+                  -d '{"body":"body"}' \
                   "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER/comments"
           exit 1
         fi
+        # -d '{"body": "Direct merge from `develop` to `main` is not permitted! Create a `release/` branch first!"}' \
