Optimize check script

--- a/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
+++ b/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
@@ -52,6 +52,9 @@ jobs:
         # Destination branch
         BASE_BRANCH=$(echo "$pr_resp" | jq -r .base.ref)
 
+        # Destination branch
+        PR_TITLE=$(echo "$pr_resp" | jq -r .title)
+
         if [[ "$HEAD_BRANCH" =~ ^(release|hotfix)\/ ]]; then
           echo "Ensure merge to main"
           if [[ "$BASE_BRANCH" != "master" ]]; then
@@ -69,9 +72,18 @@ jobs:
         fi
 
         if [[ "$HEAD_BRANCH" == "develop" ]] && [[ "$BASE_BRANCH" == "main" ]]; then
+          echo "::error ::Merge from develop to main forbidden, closing PR"
           curl -X POST  -H "Authorization: token $GITHUB_TOKEN" \
                   -H "Accept: application/vnd.github.v3+json" \
                   -d '{"body": "Direct merge from `develop` to `main` is not permitted! Create a `release/` branch first!"}' \
                   https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments
+
+          NEW_TITLE=$( echo "$PR_TITLE" | sed 's/^\[REJECTED\]\s*//')
+
+          curl \
+            -X PATCH \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/$GITHUB_REPOSITORY/hello-world/pulls/$PR_NUMBER \
+            -d '{"title":"[REJECTED] ${NEW_TITLE}", "state": "closed"}'
           exit 1
         fi
