--- a/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
+++ b/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
@@ -82,8 +82,9 @@ jobs:
 
           curl -s \
             -X PATCH \
+            -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER \
+            "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER" \
             -d '{"title":"[REJECTED] ${NEW_TITLE}", "state": "closed"}'
           exit 1
         fi
