--- a/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
+++ b/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
@@ -85,6 +85,6 @@ jobs:
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER" \
-            -d '{"title":"[REJECTED] ${NEW_TITLE}", "state": "closed"}'
+            -d "{\"title\":\"[REJECTED] $NEW_TITLE\", \"state\": \"closed\"}'
           exit 1
         fi
