Do not run in synchronize

--- a/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
+++ b/.github/workflows/ensure-pr-is-assigned-to-correct-branch.yml
@@ -16,7 +16,7 @@
 
 on:
   pull_request:
-    types: [opened, edited, synchronize, reopened]
+    types: [opened, edited, reopened]
     branches:
       - "main"
       - "develop"
